@@ -2,7 +2,7 @@
 	net_dgrm.c
 	This is enables a simple IP banning mechanism
 
-	$Header: /cvsroot/uhexen2/engine/hexen2/net_dgrm.c,v 1.51 2010-06-04 08:51:57 sezero Exp $
+	$Id$
 */
 
 #define BAN_TEST
@@ -497,7 +497,6 @@ static void Test_Poll (void *unused)
 	int		colors;
 	int		frags;
 	int		connectTime;
-	byte	playerNumber;
 
 	net_landriverlevel = testDriver;
 
@@ -522,7 +521,7 @@ static void Test_Poll (void *unused)
 		if (MSG_ReadByte() != CCREP_PLAYER_INFO)
 			Sys_Error("Unexpected repsonse to Player Info request\n");
 
-		playerNumber = MSG_ReadByte();
+		MSG_ReadByte(); /* playerNumber */
 		strcpy(name, MSG_ReadString());
 		colors = MSG_ReadLong();
 		frags = MSG_ReadLong();
