@@ -2,7 +2,7 @@
 	sv_phys.c
 	sv physics
 
-	$Header: /cvsroot/uhexen2/engine/hexen2/sv_phys.c,v 1.27 2008-12-21 18:25:09 sezero Exp $
+	$Id$
 */
 
 #include "quakedef.h"
@@ -488,10 +488,11 @@ Does not change the entities velocity at all
 static trace_t SV_PushEntity (edict_t *ent, vec3_t push)
 {
 	trace_t	trace;
-	vec3_t	start,end, impact;
+	vec3_t	start, end, impact;
 	edict_t *impact_e;
 
 	VectorCopy (ent->v.origin, start);
+	(void) start; /* variable set but not used */
 	VectorAdd (ent->v.origin, push, end);
 
 	if (ent->v.movetype == MOVETYPE_FLYMISSILE  || ent->v.movetype == MOVETYPE_BOUNCEMISSILE)
