@@ -301,7 +301,8 @@ void R_TranslatePlayerSkin (int playernum)
 	int		top, bottom;
 	byte		translate[256];
 	unsigned int	translate32[256];
-	int		i, j, s;
+	int		i, j;
+//	int		s;
 	qmodel_t	*model;
 	aliashdr_t	*paliashdr;
 	byte		*original;
@@ -356,7 +357,7 @@ void R_TranslatePlayerSkin (int playernum)
 	if (!model)
 		return;		// player doesn't have a model yet
 	paliashdr = (aliashdr_t *)Mod_Extradata (model);
-	s = paliashdr->skinwidth * paliashdr->skinheight;
+//	s = paliashdr->skinwidth * paliashdr->skinheight;
 
 	if (cl.players[playernum].playerclass >= 1 && cl.players[playernum].playerclass <= MAX_PLAYER_CLASS)
 	{
